Fix slider navbar clipping issue

--- a/auxilium/src/styles/navigation.scss
+++ b/auxilium/src/styles/navigation.scss
@@ -7,7 +7,7 @@ $nav-height: 60px;
 
 .navbar {
     position: fixed;
-    z-index: 5;
+    z-index: 10;
     top: 0;
     left: 0;
     width: 100%;
